nginx-full-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      # manage pods with the label app: hub
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      containers:
      - name: hub
        image: andyxhadji/hub
        resources:
          limits:
            memory: "200Mi"
            cpu: "1"
          requests:
            memory: "100Mi"
            cpu: "0.5"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-svc
spec:
  ports:
    - name: http
      port: 80
  selector:
    # apply service to any pod with label app: nginx
    app: hub
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: sabnzbd
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8989
  selector:
    app: sonarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hub-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: hub-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  annotations:
    rubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /sabnzbd
        pathType: Prefix
        backend:
          serviceName: sabnzbd-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
    #traefik.frontend.rule: Host:localhost;PathPrefix:/sonarr
spec:
  rules:
  - http:
      paths:
      - path: /sonarr
        pathType: Prefix
        backend:
          serviceName: sonarr-svc
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: traefik
      port: 80
      nodePort: 30182
      targetPort: 80
    - name: traefik-dashboard
      port: 80
      nodePort: 30183
      targetPort: 80
  selector:
    app: traefik
